--- a/client/src/app/createcard/create.module.css
+++ b/client/src/app/createcard/create.module.css
@@ -2,51 +2,104 @@
     margin: 0;
     width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
     height: 90.5vh;
     background-color: #61677A;
 }
+
+.left{
+    width: 40%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Poppins', 'Sans-Serif';
+    align-items: center
+}
+
+.left h1{
+    color: #FFF6E0;
+    font-weight: 700;
+    font-size: 90px;
+    margin-bottom: 0px;
+}
+
+.save, .update{
+    margin-bottom: 20px;
+    width: 50%;
+    height: 10%;
+    border-radius: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    transition: 0.25s;
+    background-color: #D9D9D9;
+    color: #272829;
+
+}
+
+.save:hover, .update:hover{
+    letter-spacing: 5px;
+    scale: 1.1;
+    cursor: pointer;
+}
+
 .cont{
-    width: 20%;
-    height: 80%;
-    border: 1px solid black;
-    color: white;
-    perspective: 800px;
-}
-
-.card{
-    border-radius: 2em;
-    background-color: black;
-    width: 100%;
+    /* border: 1px solid black; */
     height: 100%;
-    position: relative;
-    transition: 1s;
-    transform-style: preserve-3d;
+    width: 60%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
-
-
-
-.cont:hover > .card{
-    transform: rotateY(180deg);
-}
-
 .front,.back{
-    position: absolute;
+    width: 35%;
+    height: 80%;
+    border-radius: 1rem;
+    padding: 10px;
+    background-color: #D9D9D9;
+    display: flex;
+    font-family: 'Poppins', 'Sans-Serif';
+}
+
+.front{
+    justify-content: center;
+    align-items: center;
+    word-wrap: break-word;
+    word-break: break-all;
+    white-space: pre-wrap;
+    font-size: 50px;
+    font-weight: 700;
+    text-align: center;
+    line-height: 50px;
+}
+
+.titlecontainer{
+    padding: 10px;
+    margin-bottom: 20px;
+    width: 50%;
+    height: 15%;
+    border-radius: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    transition: 0.25s;
+    background-color: #D9D9D9;
+    color: #272829;
+}
+
+.movietitle{
+    border: none;
+    outline: none;
+    padding: 10px;
+    background-color: transparent;
+    font-family: 'Poppins', 'Sans-Serif';
     width: 100%;
     height: 100%;
-    backface-visibility: hidden;
+    font-size: 20px;
+    word-wrap: break-word;
+    word-break: break-all;
+    white-space: break-spaces;
+    vertical-align: middle;
+    font-weight: 600;
 }
-
-.front h1{
-    padding: 10px;
-}
-
-.back h1{
-    padding: 10px;
-}
-
-.back{
-    transform: rotateY(180deg);
-}
-
