--- a/client/src/app/createcard/create.module.css
+++ b/client/src/app/createcard/create.module.css
@@ -83,11 +83,12 @@
     border: none;
     font-family: 'Poppins', 'Sans-Serif';
     margin: 5px;
-    background-color: white;
+    background-color: #D9D9D9;
     resize: none;
-    padding: 7px;
+    padding: 1rem;
     border-radius: 1em;
     width: 80%;
+    border: 1px solid #272829;
 
 }
 
@@ -121,4 +122,17 @@
     vertical-align: middle;
     font-weight: 600;
     resize: none;
+}
+
+
+.textContainer{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    border: 1px solid red;
+
+}
+
+.numRank{
+    font-size: 1rem;
 }
