--- a/client/src/app/createcard/create.module.css
+++ b/client/src/app/createcard/create.module.css
@@ -65,7 +65,8 @@
     justify-content: center;
     align-items: center;
     word-wrap: break-word;
-    word-break: break-all;
+    overflow-wrap: anywhere;
+    /* word-break: break-all; */
     white-space: pre-wrap;
     font-size: 50px;
     font-weight: 700;
@@ -77,6 +78,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 1rem;
 }
 .rank1{
     outline: none;
@@ -88,7 +90,8 @@
     padding: 1rem;
     border-radius: 1em;
     width: 80%;
-    border: 1px solid #272829;
+    /* border: 1px solid #272829; */
+    box-shadow: 0px 0px 2px #272829;
 
 }
 
