--- a/client/src/app/createcard/create.module.css
+++ b/client/src/app/createcard/create.module.css
@@ -141,3 +141,12 @@
 .numRank{
     font-size: 1rem;
 }
+
+.rankcontainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
